# taygeta

./: .gitignore  Guardfile  Makefile  README.md  Taygeta.hs  taygeta.cabal
Data/Taygeta/: Freqs.hs
Taygeta/: Corpus.hs
Test/: TestTaygeta.hs
Text/Taygeta/: Tokenizer.hs  Types.hs
scratch/: LDA.hs  TayCorpus.hs
specs/Taygeta/: TokenizerSpec.hs
src/Taygeta/: Tokenizer.hs  Types.hs
src/Taygeta/Parser/: Sexpr.hs  Treebank.hs  Utils.hs
