Name:                taygeta
Version:             0.1.0
Synopsis:            A library for text processing and NLP.
-- Description:         
Homepage:            http://github.com/erochest/taygeta
License:             BSD3
License-file:        LICENSE
Author:              Eric Rochester
Maintainer:          erochest@virginia.edu
-- Copyright:           
Category:            Data

Build-type:          Simple

-- Extra-source-files:  

Cabal-version:       >=1.9.2

Flag development
  Description: Build in development mode.
  Default:     False

Flag profiling
  Description: Build with profiling enabled.
  Default:     False

Library
  Exposed-modules:
      Text.Taygeta.Tokenizer
    , Taygeta.Corpus

  Other-modules:

  Build-depends:
      base                 >= 4.3
    , text                 >= 0.11 && < 0.13
    , containers           >= 0.4  && < 0.6
    , mtl                  >= 2.1  && < 2.3
    , hashable             >= 1.1  && < 1.3
    , unordered-containers >= 0.2  && < 0.4
    , bytestring           >= 0.9  && < 0.11
    , system-filepath      >= 0.4  && < 0.6
    , attoparsec           >= 0.10 && < 0.12
    , data-lens            >= 2.10 && < 2.12
    , resourcet            >= 0.3  && < 0.5
    , transformers         >= 0.3  && < 0.5
    , monad-control        >= 0.3  && < 0.5
    , conduit              >= 0.5  && < 0.7
    , attoparsec-conduit   >= 0.5  && < 0.7
    , filesystem-conduit   >= 0.5  && < 0.7

  if flag(development)
    cpp-options: -DDEVELOPMENT
    ghc-options: -w -Wall -fhpc
  else
    if flag(profiling)
      cpp-options: -DDEVELOPMENT
      ghc-options: -w -Wall -fhpc
    else
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
                   -fno-warn-orphans -fno-warn-unused-do-bind

Executable taygeta
  Main-is:      Taygeta.hs
  Build-depends:
      taygeta
    , base                 >= 4.3
    , bytestring           >= 0.9  && < 0.11
    , text                 >= 0.11 && < 0.13
    , containers           >= 0.4  && < 0.6
    , hashable             >= 1.1  && < 1.3
    , unordered-containers >= 0.2  && < 0.4
    , system-filepath      >= 0.4  && < 0.6
    , conduit              >= 0.5  && < 0.7
    , attoparsec           >= 0.10 && < 0.12
    , attoparsec-conduit   >= 0.5  && < 0.7
    , filesystem-conduit   >= 0.5  && < 0.7

  if flag(development)
    cpp-options: -DDEVELOPMENT
    ghc-options: -w -Wall -fhpc
  else
    if flag(profiling)
      cpp-options: -DDEVELOPMENT
      ghc-options: -w -Wall -rtsopts -fhpc
    else
      ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
                   -fno-warn-orphans -fno-warn-unused-do-bind -rtsopts
                   -threaded

Test-Suite test-taygeta
  type:           exitcode-stdio-1.0
  hs-source-dirs: Test
  main-is:        TestTaygeta.hs
  build-depends:
      base               >= 4.3
    , taygeta
    , system-filepath    >= 0.4  && < 0.6
    , text               >= 0.11 && < 0.13
    , conduit            >= 0.5  && < 0.7
    , mtl                >= 2.1  && < 2.3
    , resourcet          >= 0.3  && < 0.5
    , hspec              >= 1.3  && < 1.5
    , hspec-expectations
    , HUnit              >= 1.0  && <= 2.0
    , QuickCheck         >= 2.4  && <= 2.5
  ghc-options:    -Wall -rtsopts -fhpc

Source-Repository head
  type:     git
  location: git://github.com/erochest/taygeta.git
  
